--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+<header>
+  <h1>Carlos Yael Miranda</h1>
+  <p>Welcome to my Website!</p>
+</header>
+<nav>
+  <a href="https://github.com/carlos2343">Github</a>
+  <a href="https://www.linkedin.com/in/carlos-miranda23/">LinkedIn</a>
+  <a href="#">Link</a>
+  <a href="#">Link</a>
+</nav>
 <body>
   <app-root></app-root>
 </body>
+<footer>
+
+</footer>
 </html>
